# hotfuzz_control_panel

./: README.md  pyproject.toml
hotfuzz_control_panel/: __main__.py
